--- a/machine-learning/logistic-regression.org
+++ b/machine-learning/logistic-regression.org
@@ -278,7 +278,7 @@
    #+end_src
 
    #+RESULTS:
-   [[file:../output/images/mgd-vs-optmin.png]]
+   [[../output/images/mgd-vs-optmin.png]]
    
 * ロジスティック回帰 + 正規化 (Regularization)
 * 質問 [0/1]
