--- a/perceptron.org
+++ b/perceptron.org
@@ -58,7 +58,7 @@ There is another note on the GoodNotes.
        パレメータは
        (1.0, 1.0, 0.9), (0.7, 0.7, 0.6) 時に条件を満す
 
-     #+begin_src python
+     #+begin_src python :exports both
        import numpy as np
 
        class LogicCircuit:
@@ -115,7 +115,7 @@ There is another note on the GoodNotes.
 
      #+RESULTS:
 
-     #+begin_src python
+     #+begin_src python :exports both
        params = {
            "AND": [(0.5, 0.5, 0.7), (1.0, 1.0, 1.0)],
            "NAND": [(-0.5, -0.5, -0.7), (-1.0, -1.0, -1.1)],
@@ -140,7 +140,7 @@ There is another note on the GoodNotes.
      : [0. 0. 0.]	[0. 1. 1.]	[1. 0. 1.]	[1. 1. 1.]
      : [0. 0. 0.]	[0. 1. 1.]	[1. 0. 1.]	[1. 1. 1.]
 
-     #+begin_src python
+     #+begin_src python :exports both
        for logic, values in params.items():
            print(f"{logic}:")
            for value in values:
@@ -168,7 +168,7 @@ There is another note on the GoodNotes.
 
     XOR を表現.
     入力を変えらないといけない.
-    #+begin_src python
+    #+begin_src python :exports both
       and_param = params["AND"][0]
       nand_param = params["NAND"][0]
       or_param = params["OR"][0]
