--- a/activation_functions/step-vs-sigmoid.org
+++ b/activation_functions/step-vs-sigmoid.org
@@ -1,7 +1,7 @@
 #+property: header-args:python :session step-vs-sigmoid :async yes :output results
 
 
-#+begin_src python :file ../output/images/step-vs-sigmoid.png
+#+begin_src python :exports both :file ../output/images/step-vs-sigmoid.png
   import matplotlib.pyplot as plt
   import numpy as np
 
